tests/invalid/bad_reg.s
  .text

  .global _start
_start:
  add r0, r20, r40
  